# webSORB

./: .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  attrs_mypy_plugin.py  conftest.py  data.txt  env.yaml  main.py  mypy.ini  pyproject.toml  requirements.txt  tasks.py
websorb/models/: data_regression.py  isotherm.py
websorb/numerical/isotherm_handlers/: __init__.py  _abstract_handler.py  _classic_base.py  _langmuir.py  helpers.py
websorb/numerical/isotherm_handlers/tests/: test_langmuir_handler.py
websorb/numerical/isotherm_regression/: regression.py
websorb/numerical/isotherm_regression/tests/: test_regression.py
websorb/tests/: test_main.py
websorb/views/: isotherm_calc_view.py  isotherm_regression_view.py
websorb/views/tests/: test_isotherm_regression_view.py
